Update maven dependencies