@@ -27,19 +27,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>1.5.4.RELEASE</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
-            <version>1.0.4</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>com.dooapp.fxform2</groupId>
             <artifactId>core</artifactId>
-            <version>8.0.18</version>
+            <version>8.1.1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>validation-api</artifactId>
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>fop</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>org.zeroturnaround</groupId>
@@ -103,17 +103,17 @@
         <dependency>
             <groupId>net.sourceforge.plantuml</groupId>
             <artifactId>plantuml</artifactId>
-            <version>8049</version>
+            <version>8059</version>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-codec</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
         </dependency>
         <dependency>
             <groupId>de.tototec</groupId>
             <artifactId>de.tototec.cmdoption</artifactId>
-            <version>0.4.1</version>
+            <version>0.4.2</version>
         </dependency>
         <dependency>
             <artifactId>install4j</artifactId>
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-speller</artifactId>
-            <version>2.1.2</version>
+            <version>2.1.3</version>
             <exclusions>
                 <exclusion>
                     <artifactId>morfologik-polish</artifactId>
@@ -145,17 +145,17 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-core</artifactId>
-            <version>1.7.0</version>
+            <version>1.10.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>1.7.0</version>
+            <version>1.10.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome-pack</artifactId>
-            <version>1.7.0</version>
+            <version>1.10.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.asciidocfx</groupId>
@@ -176,6 +176,12 @@
                                 <mainClass>com.kodcu.boot.AppStarter</mainClass>
                             </configuration>
                         </plugin>-->
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
@@ -195,8 +201,15 @@
                             <id>asciidocfx</id>
                         </program>
                     </programs>
-                    <extraJvmArguments>-Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US -XX:+UseG1GC
+                    <extraJvmArguments>
+                        -Duser.language=en
+                        -Duser.country=US
+                        -Dfile.encoding=UTF-8
+                        -XX:+UseG1GC
+                        -Xmx1G
                         -Djava.awt.headless=false
+                        --add-opens javafx.base/com.sun.javafx.collections=javafx.web
+                        --add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
                     </extraJvmArguments>
                     <repositoryLayout>flat</repositoryLayout>
                     <useWildcardClassPath>true</useWildcardClassPath>
